...
            }
            is UiState.Success -> {
                if (uiState.data.isEmpty()) {
                    ErrorScreen()
                } else {
                    FavoriteContent(
                        listUser = uiState.data,
                        navigateToDetail = navigateToDetail
                    )
                }
            }
            is UiState.Error -> {
                ErrorScreen()
...
fun FavoriteContent(
    listUser: List<FavoriteUser>,
    modifier: Modifier = Modifier,
    navigateToDetail: (String) -> Unit
) {
    LazyColumn(
        modifier = Modifier.testTag("listUserFavorite")
    ){
        items(listUser, key = { it.username }) { user ->
            ItemUser(
                photoUrl = user.avatarUrl,
                username = user.username,
                onClick = { navigateToDetail(user.username) }
...
