...
}

@Preview
@Composable
fun SearchPreview() {
    JetCoffeeTheme {
        Search()
    }
}
