...
        },
        floatingActionButton = {
            FloatingActionButton(
                onClick = updateFavoriteStatus,
                containerColor = MaterialTheme.colorScheme.primary,
                contentColor = MaterialTheme.colorScheme.secondary,
                modifier = Modifier.testTag("favoriteButton")
            ) {
                Icon(
                    imageVector = if (favoriteStatus) {
                        Icons.Default.Favorite
                    } else {
                        Icons.Default.FavoriteBorder
...
